[package]
name = "bilive-danmaku"
version = "0.3.0"
edition = "2021"
authors = ["4t145<u4t145@163.com>"]
description = "A bilibili live danmaku stream sdk"
license-file = "LICENSE"
license = "Apache-2.0"
repository = "https://github.com/4t145/bilive-danmaku"
keywords = ["bilibili", "live", "danmaku", "sdk"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "using-tokio"
required-features = ["connect", "rt_tokio"]

[[example]]
name = "using-wasm"
required-features = ["connect", "rt_wasm"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "*", optional = true }
brotli = { version = "3", optional = true }
deflate = { version = "1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }
log = "0.4"
reqwest = { version = "0.11", features = ["json"], optional = true }

[dependencies.bincode]
version = "1.3.3"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["time", "sync", "rt"]

[dependencies.tokio-tungstenite]
version = "*"
features = ["native-tls"]
optional = true

[dependencies.gloo-net]
version = "0.3"
optional = true

[dependencies.gloo-timers]
version = "0.2"
optional = true
features = ["futures"]

[dependencies.gloo-utils]
version = "0.1"
optional = true

[dependencies.futures]
version = "0.3"


[features]
default = ["event"]
connect = ["dep:futures-util", "dep:brotli", "dep:reqwest", "event"]
rt_tokio = ["connect", "dep:tokio", "dep:tokio-tungstenite", "reqwest?/default"]
rt_wasm = [
    "connect",
    "dep:js-sys",
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:gloo-utils",
    "dep:wasm-bindgen-futures",
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "reqwest?/default",
]
bincode = ["dep:bincode"]
deflate = ["dep:deflate", "connect"]
event = []
json = []
[dev-dependencies]
env_logger = "*"
