[package]
name = "bilive-danmaku"
version = "0.3.0"
edition = "2021"
authors = ["4t145<u4t145@163.com>"]
description = "A bilibili live danmaku stream sdk"
license = "Apache-2.0"
# license-file = "LICENSE"
repository = "https://github.com/4t145/bilive-danmaku"
keywords = ["bilibili", "live", "danmaku", "sdk"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "using-tokio"
required-features = ["connect", "rt_tokio"]

[[example]]
name = "using-wasm"
required-features = ["connect", "rt_wasm"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", optional = true }
brotli = { version = "3", optional = true }
deflate = { version = "1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }
log = "0.4"
reqwest = { version = "0.11", features = ["json"], optional = true }
byteorder = { version = "1.4.3", optional = true }
http = "0.2.9"

[dependencies.bincode]
version = "1.3.3"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["time", "sync", "rt"]

[dependencies.tokio-tungstenite]
version = "0.19"
features = ["native-tls"]
optional = true

[dependencies.gloo-net]
version = "0.3"
optional = true

[dependencies.gloo-timers]
version = "0.2"
optional = true
features = ["futures"]

[dependencies.gloo-utils]
version = "0.1"
optional = true

[dependencies.futures]
version = "0.3"

[dependencies.bilibili-client]
git = "https://github.com/4t145/bilibili-client.git"
rev = "32edfa6"
features = ["live"]
default-features = false

[features]
default = ["event"]
connect = [
    "dep:futures-util",
    "dep:brotli",
    "dep:reqwest",
    "event",
    "byteorder",
]
rt_tokio = ["connect", "dep:tokio", "dep:tokio-tungstenite", "reqwest?/default"]
rt_wasm = [
    "connect",
    "dep:js-sys",
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:gloo-utils",
    "dep:wasm-bindgen-futures",
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "reqwest?/default",
]
bincode = ["dep:bincode"]
deflate = ["dep:deflate", "connect"]
event = []
json = []
[dev-dependencies]
env_logger = "0.10"
